[package]
name = "intake"
version = "0.0.4"
authors = ["Nikola Hristov <president@nikolahristov.tech>"]
edition = "2021"
description = "IntakeNomNom intake"
documentation = "https://docs.rs/intake"
readme = "README.md"
repository = "https://github.com/IntakeNomNom/crates/tree/main/intake"
license-file = "LICENSE"
keywords = []
categories = []

[dependencies]
