[package]
name = "intake"
version = "0.0.4"
authors = ["Nikola R. Hristov <nikola@lightrix.help>"]
edition = "2021"
description = "IntakeNomNom intake"
documentation = "https://docs.rs/intake"
readme = "README.md"
repository = "https://github.com/IntakeNomNom/crates/tree/main/intake"
license-file = "LICENSE"
keywords = []
categories = []

[dependencies]
