[package]
name = "nomnom"
version = "0.0.4"
authors = ["Nikola R. Hristov <nikola@lightrix.help>"]
edition = "2021"
description = "IntakeNomNom nomnom"
documentation = "https://docs.rs/nomnom"
readme = "README.md"
repository = "https://github.com/IntakeNomNom/crates/tree/main/nomnom"
license-file = "LICENSE"
keywords = []
categories = []

[dependencies]
